[gd_scene load_steps=9 format=3 uid="uid://cwkcmytdv540i"]

[ext_resource type="Script" path="res://res/scripts/2d_scene_handler.gd" id="1_1u3dr"]
[ext_resource type="Script" path="res://res/scripts/2d_cam_control.gd" id="2_id77w"]
[ext_resource type="PackedScene" uid="uid://d3aowb23p7ba1" path="res://scenes/subscenes/2d_container.tscn" id="3_mbie2"]
[ext_resource type="PackedScene" uid="uid://dy7tvbti6cjlw" path="res://scenes/2d/Entity/carga.tscn" id="4_c3isu"]
[ext_resource type="Script" path="res://res/scripts/2d_charge.gd" id="5_35b30"]
[ext_resource type="Script" path="res://scenes/2d/editor_object.gd" id="6_joy7v"]
[ext_resource type="Script" path="res://scenes/2d/control.gd" id="8_r3f8o"]
[ext_resource type="PackedScene" uid="uid://cy2nvtwdjx6lg" path="res://scenes/2d/h_slider.tscn" id="9_k856w"]

[node name="2dTest" type="Node2D"]
script = ExtResource("1_1u3dr")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("2_id77w")

[node name="2dContainer" parent="." instance=ExtResource("3_mbie2")]
res = 100
size = Vector2(1000, 500)

[node name="Carga2" parent="." instance=ExtResource("4_c3isu")]
position = Vector2(-179, 0)
script = ExtResource("5_35b30")

[node name="Carga" parent="." instance=ExtResource("4_c3isu")]
position = Vector2(269, 0)
script = ExtResource("5_35b30")

[node name="Node2D" type="Node2D" parent="."]

[node name="Level" type="Node2D" parent="Node2D"]

[node name="Editor_Object" type="Node2D" parent="Node2D"]
script = ExtResource("6_joy7v")

[node name="Sprite2D" type="Sprite2D" parent="Node2D/Editor_Object"]

[node name="cam_container" type="Node2D" parent="Node2D"]

[node name="Camera2D" type="Camera2D" parent="Node2D/cam_container"]
position = Vector2(293, 23)
zoom = Vector2(0.65, 0.65)

[node name="Control" type="Control" parent="Node2D"]
layout_mode = 3
anchors_preset = 0
offset_left = 720.0
offset_top = 34.0
offset_right = 1104.0
offset_bottom = 182.0
size_flags_horizontal = 4
script = ExtResource("8_r3f8o")

[node name="TabContainer" type="TabContainer" parent="Node2D/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -109.0
offset_top = -18.0
offset_right = 33.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0
tab_focus_mode = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Node2D/Control/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D/Control/TabContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="Carga" parent="Node2D/Control/TabContainer/ScrollContainer/VBoxContainer" instance=ExtResource("9_k856w")]
layout_mode = 2
min_value = -8.0

[node name="X" parent="Node2D/Control/TabContainer/ScrollContainer/VBoxContainer" instance=ExtResource("9_k856w")]
layout_mode = 2
max_value = 700.0

[node name="Y" parent="Node2D/Control/TabContainer/ScrollContainer/VBoxContainer" instance=ExtResource("9_k856w")]
layout_mode = 2

[node name="Z" parent="Node2D/Control/TabContainer/ScrollContainer/VBoxContainer" instance=ExtResource("9_k856w")]
layout_mode = 2

[node name="W" parent="Node2D/Control/TabContainer/ScrollContainer/VBoxContainer" instance=ExtResource("9_k856w")]
layout_mode = 2

[connection signal="value_changed" from="Node2D/Control/TabContainer/ScrollContainer/VBoxContainer/Carga" to="Node2D/Control" method="_on_carga_value_changed"]
[connection signal="value_changed" from="Node2D/Control/TabContainer/ScrollContainer/VBoxContainer/X" to="Node2D/Control" method="_on_x_value_changed"]
[connection signal="value_changed" from="Node2D/Control/TabContainer/ScrollContainer/VBoxContainer/Y" to="Node2D/Control" method="_on_y_value_changed"]
[connection signal="value_changed" from="Node2D/Control/TabContainer/ScrollContainer/VBoxContainer/Z" to="Node2D/Control" method="_on_z_value_changed"]
[connection signal="value_changed" from="Node2D/Control/TabContainer/ScrollContainer/VBoxContainer/W" to="Node2D/Control" method="_on_w_value_changed"]
